src/objects/PYME001_Proveedor__c.object
<CustomObject>
    <description>Nuevo Objeto para Proveedores Pyme.</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proveedores</relationshipLabel>
        <relationshipName>Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Proveedores</relationshipLabel>
        <relationshipName>Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_pr_Concentracion__c</fullName>
        <description>Nuevo campo porcentaje concentracion pyme</description>
        <label>% de Concentración</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PYME_txt_Sitio_Web__c</fullName>
        <defaultValue>&apos;www.&apos;</defaultValue>
        <description>Nuevo campo PYME Sitio Web</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sitio Web</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PYME_un_Anios__c</fullName>
        <description>Nuevo campo pyme para proovedores años</description>
        <label>Años de Relación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PYME_un_Plazo__c</fullName>
        <description>Nuevo campo de plazo para pyme</description>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proveedor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_txt_Sitio_Web__c</columns>
        <columns>PYME_un_Anios__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Proveedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <recordTypes>
        <fullName>PYME_tre_Proveedor</fullName>
        <active>true</active>
        <label>Proveedor PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>